Pages were created in their most basic form. Directions have been made.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">RickAndMorty</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="splash_title">Rick And Morty</string>
+    <string name="splash_greeting">Welcome</string>
+    <string name="splash_button_text">explore</string>
 </resources>
