--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="characterOriginTitle">Origin:</string>
     <string name="characterLocationTitle">Location:</string>
     <string name="characterEpisodesTitle">Episodes:</string>
-    <string name="characterCreatedAtTitle">Created at:</string>
+    <string name="characterCreatedAtTitle">Created at:\n(in API)</string>
 </resources>
